// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageView component snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
  style={
    Object {
      "width": 640,
    }
  }
>
  <div
    className="ImageViewInnerContainer"
  >
    <div
      className="ImageViewImgContainer"
    >
      <img
        alt="This is a caption"
        className="ImageViewImg"
        src="somesite.com/image.png"
        style={
          Object {
            "width": 640,
          }
        }
      />
    </div>
    <div
      className="CaptionContainer"
      data-testid="CaptionComponentTestId"
      style={
        Object {
          "maxWidth": 640,
        }
      }
    >
      <div
        className="IconContainer"
      >
        <i
          aria-hidden="true"
          className="image icon"
          onClick={[Function]}
        />
      </div>
      <p
        className="ContentPageCaptionTextSize CaptionText"
      >
        This is a caption
      </p>
    </div>
  </div>
</div>
`;

exports[`ImageView component with image credit string snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
  style={
    Object {
      "width": 640,
    }
  }
>
  <div
    className="ImageViewInnerContainer"
  >
    <div
      className="ImageViewImgContainer"
    >
      <img
        alt="This is a caption (Image credit: Image God)"
        className="ImageViewImg"
        src="somesite.com/image.png"
        style={
          Object {
            "width": 640,
          }
        }
      />
    </div>
    <div
      className="CaptionContainer"
      data-testid="CaptionComponentTestId"
      style={
        Object {
          "maxWidth": 640,
        }
      }
    >
      <div
        className="IconContainer"
      >
        <i
          aria-hidden="true"
          className="image icon"
          onClick={[Function]}
        />
      </div>
      <p
        className="ContentPageCaptionTextSize CaptionText"
      >
        This is a caption (Image credit: Image God)
      </p>
    </div>
  </div>
</div>
`;
